2008-05-05  Mike Frysinger  <vapier@gentoo.org>

   * src/svf/svf.c: Fix __MINGW32__ typo.

2008-05-04  Mike Frysinger  <vapier@gentoo.org>

   * src/flash/amd.c: Handle chipid 0x22ed M29W640DT.

2008-05-02  Arnim Laeuger  <arniml@users.sourceforge.net>

   * src/tap/cable/generic_usbconn.c (generic_usbconn_connect):
     fix user_specified.driver comparison

2008-05-01  Mike Frysinger  <vapier@gentoo.org>

   * configure.ac: Check for libusb before libftdi since the latter needs
     the former.
   * configure.ac: Use AC_PATH_TOOL() instead of AC_PATH_PROG() so that we
     handle cross-compiling sanely.
   * configure.ac: Make LIBS/CPPFLAGS sane and consistent when checking for
     libusb and libftdi.
   * configure.ac: Use POSIX compliant tests for equality ("=", not "==").

2008-04-26  Kolja Waschk <kawk>

   * src/flash/amd.c: Separate Chip name by Manufacturer (Andrey F. Ilchuk)

2008-04-24  Mike Frysinger  <vapier@gentoo.org>

   * src/tap/usbconn/libusb.c (usbconn_libusb_connect): Use the
     usb_get_busses() function rather than the usb_busses global
     variable due to portability issues (like with libusb-win32).
   * src/jtag.c (jtag_readline_loop): [ 1950315 ] Fix quiting when
     using the non readline version.
   * configure.ac: [ 1950061 ] Look for the ChangeLog in $srcdir.

2008-04-19  Kolja Waschk <kawk>

   * src/tap/parport/ftd2xx.c: SetBaudRate to 3E6, not 48E6. Should
     fix [ 1925509 ] ftd2xx: SetBaudRate fails with FT245
   * src/flash/intel.c: Handle chips that support "Mitsubishi
     standard/enhanced command set" just like Intel chips. Need
     to do more research about the differences (if any) [1946559]
   * src/tap/cable/usbblaster.c: clock() at highest possible rate
     using the byte shift mode for n>=8 (Thanks M. Banditt)
   * include/cmd.h, src/cmd/cmd.c, src/jtag.c: [ 1946331 ] command
     completion support (by Mike Frysinger)
   * configure.ac, acinclude.m4: [ 1946114 ] make AC_PROG_SED